# hacknews2md

./: .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CHANGELOG.md  MIGRATION_GUIDE.md  Makefile  README.md  WORKFLOW.md  archive_news.py  browser_manager.py  config.json.example  config.py  db_utils.py  diagnose_scrapling.py  fetch_news.py  generate_markdown.py  hacknews.db-journal  install.ps1  llm_business.py  llm_evaluator.py  llm_tag_extractor.py  llm_utils.py  manage_keywords.py  markdown_to_html_converter.py  prompts.py  proxy_config.py  pyproject.toml  requirements.txt  ruff.toml  skills-lock.json  summarize_news.py  summarize_news2.py  summarize_news3.py  test_gemini_models.py  test_get_article.py  test_image_recognition.py  title_translator.py  upload_html_draft.py  wechat_access_token.py  (+1 more)
.claude/: settings.local.json
config/: config.json.example  deployment.example.json
css/: wechat-article.css
data/: hacknews.db-shm  hacknews.db-wal
docs/: CHANGELOG_LLM.md  DECISIONS.md  MCP_SETUP_GUIDE.md  MOONSHOT_INTEGRATION.md  WECHAT_PUBLISH.md  original_content.txt  wsl.md
hn2md/: __init__.py  __main__.py  cli.py  constants.py  context.py  context_export.py  lock.py  screenshot_capture.py  state.py
prompts/: cover-prompt.md
publisher/: __init__.py  cli.py  constants.py  context.py  gates.py
scripts/: audit_news.py  auto_process.py  generate_wechat_cover.py  generate_wechat_cover_ai.py  link_codex_skills.ps1  publish_wechat.py  publisher.ps1  scrape_hn_now.js
tests/: conftest.py  test_ai_session_reader.py  test_decisions_contract.py  (+9 more)
(+187 files in other folders)
